feat: fix media

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             type="image"
             alt="send form"
             id="image"
-            src="/img/unnamed.jpg"
+            src="img/unnamed.jpg"
           />
         </div>
         <div>
@@ -203,21 +203,21 @@
       </section>
       <section>
         <div>
-          <img src="/img/ntt.png" alt="image" />
+          <img src="img/ntt.png" alt="image" />
         </div>
         <div>
           <audio controls>
-            <source src="/img/song_5.mp3" type="audio/mpeg" />
+            <source src="img/song_5.mp3" type="audio/mpeg" />
           </audio>
         </div>
         <div>
           <video controls="controls">
-            <source src="/img/sample-5s.mp4" type="video/mp4" />
+            <source src="img/sample-5s.mp4" type="video/mp4" />
           </video>
         </div>
         <div>
           <img
-            src="/img/1675463209_gas-kvas-com-p-fonovii-risunok-v-css3-29.png"
+            src="img/1675463209_gas-kvas-com-p-fonovii-risunok-v-css3-29.png"
             alt="Изображение"
             usemap="#map"
           />
