feat: update index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div>
           <label for="email">Email:</label>
           <input
+            id="email"
             type="email"
             id="email"
             name="email"
@@ -67,6 +68,7 @@
         <div>
           <label for="number">Write the order number:</label>
           <input
+            id="number"
             type="number"
             name="number"
             min="18"
