feat: update index.html

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div>
           <label for="file">Загрузить файл</label>
-          <input type="file" name="file" id="file" accept="jpg,png,gif" />
+          <input type="file" name="file" id="file" accept="jpg/png/gif" />
         </div>
         <div>
           <input
