--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <div>
           <label for="email">Email:</label>
           <input
-            id="email"
             type="email"
             id="email"
             name="email"
@@ -225,6 +224,7 @@
           />
           <map name="map">
             <area
+              alt="map"
               shape="rect"
               coords="0,0,100,100"
               href="https://developer.mozilla.org/ru/"
