--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
         <div>
           <label for="file">Загрузить файл</label>
-          <input type="file" name="file" id="file" accept="jpg/png/gif" />
+          <input type="file" name="file" id="file" accept="jpg/png/gif">
         </div>
         <div>
           <input
@@ -199,7 +199,7 @@
         </div>
         <div>
           <input type="button" value="Click" />
-          <input type="hidden" name="hidden" id="hidden" value="Hide" />
+          <input type="hidden" name="hidden" id="hidden" value="Hide">
         </div>
       </section>
       <section>
