--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
         <div>
           <label for="file">Загрузить файл</label>
-          <input type="file" name="file" id="file" accept="jpg/png/gif">
+          <input type="file" name="file" id="file" accept="jpg/png, jpg/gif">
         </div>
         <div>
           <input
